--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "livewire/livewire": "^2.11"
+        "livewire/livewire": "^2.11",
+        "munafio/chatify": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
